@@ -2,41 +2,83 @@ package by.it.group410971.rabchenya.lesson15;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.Charset;
 import java.nio.charset.MalformedInputException;
 import java.nio.charset.StandardCharsets;
+import java.nio.charset.UnmappableCharacterException;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.*;
 
 public class SourceScannerC {
 
-    static class FileContent {
+    static class FileData {
         String path;
         String content;
 
-        FileContent(String path, String content) {
+        FileData(String path, String content) {
             this.path = path;
             this.content = content;
         }
     }
 
+    // Оптимизированное расстояние Левенштейна
+    public static int levenshteinDistance(String s1, String s2, int threshold) {
+        if (s1 == null || s2 == null) return Integer.MAX_VALUE;
+
+        int n = s1.length();
+        int m = s2.length();
+
+        if (Math.abs(n - m) > threshold) return Integer.MAX_VALUE;
+
+        int[] prev = new int[m + 1];
+        int[] curr = new int[m + 1];
+
+        for (int j = 0; j <= m; j++) {
+            prev[j] = j;
+        }
+
+        for (int i = 1; i <= n; i++) {
+            curr[0] = i;
+            int minInRow = i;
+
+            for (int j = 1; j <= m; j++) {
+                int cost = (s1.charAt(i - 1) == s2.charAt(j - 1)) ? 0 : 1;
+                curr[j] = Math.min(
+                        Math.min(curr[j - 1] + 1, prev[j] + 1),
+                        prev[j - 1] + cost
+                );
+                minInRow = Math.min(minInRow, curr[j]);
+            }
+
+            if (minInRow > threshold) {
+                return Integer.MAX_VALUE;
+            }
+
+            int[] temp = prev;
+            prev = curr;
+            curr = temp;
+        }
+
+        return prev[m] <= threshold ? prev[m] : Integer.MAX_VALUE;
+    }
+
     public static void main(String[] args) {
         String src = System.getProperty("user.dir") + File.separator + "src" + File.separator;
-
-        List<FileContent> files = new ArrayList<>();
+        List<FileData> files = new ArrayList<>();
 
         try {
             Files.walkFileTree(Paths.get(src), new SimpleFileVisitor<Path>() {
                 @Override
-                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
                     if (file.toString().endsWith(".java")) {
-                        processJavaFile(file, src, files);
+                        processFile(file, files, src);
                     }
                     return FileVisitResult.CONTINUE;
                 }
 
                 @Override
-                public FileVisitResult visitFileFailed(Path file, IOException exc) throws IOException {
+                public FileVisitResult visitFileFailed(Path file, IOException exc) {
                     return FileVisitResult.CONTINUE;
                 }
             });
@@ -52,21 +94,71 @@ public class SourceScannerC {
         Collections.sort(sortedPaths);
 
         for (String path : sortedPaths) {
+            System.out.println(path);
             List<String> copyPaths = copies.get(path);
-            if (!copyPaths.isEmpty()) {
-                System.out.println(path);
-                for (String copyPath : copyPaths) {
-                    System.out.println(copyPath);
-                }
+            Collections.sort(copyPaths);
+            for (String copyPath : copyPaths) {
+                System.out.println(copyPath);
             }
         }
     }
 
-    private static void processJavaFile(Path file, String srcRoot, List<FileContent> files) {
-        try {
-            String content = readFileContent(file);
+    private static Map<String, List<String>> findCopies(List<FileData> files) {
+        Map<String, List<String>> copies = new HashMap<>();
+        int threshold = 10;
 
-            // Пропускаем файлы с тестами
+        // Сначала находим точные копии по хешу
+        Map<String, List<FileData>> exactCopies = new HashMap<>();
+        for (FileData file : files) {
+            exactCopies.computeIfAbsent(file.content, k -> new ArrayList<>()).add(file);
+        }
+
+        // Добавляем точные копии
+        for (List<FileData> fileGroup : exactCopies.values()) {
+            if (fileGroup.size() > 1) {
+                Collections.sort(fileGroup, (a, b) -> a.path.compareTo(b.path));
+                for (int i = 0; i < fileGroup.size(); i++) {
+                    for (int j = i + 1; j < fileGroup.size(); j++) {
+                        copies.computeIfAbsent(fileGroup.get(i).path, k -> new ArrayList<>())
+                                .add(fileGroup.get(j).path);
+                    }
+                }
+            }
+        }
+
+        // Затем ищем похожие файлы по Левенштейну
+        for (int i = 0; i < files.size(); i++) {
+            FileData file1 = files.get(i);
+
+            for (int j = i + 1; j < files.size(); j++) {
+                FileData file2 = files.get(j);
+
+                // Пропускаем если уже нашли как точные копии
+                if (copies.containsKey(file1.path) && copies.get(file1.path).contains(file2.path)) {
+                    continue;
+                }
+
+                // Быстрая проверка по длине
+                if (Math.abs(file1.content.length() - file2.content.length()) > threshold) {
+                    continue;
+                }
+
+                // Проверка расстояния Левенштейна
+                int distance = levenshteinDistance(file1.content, file2.content, threshold);
+                if (distance <= threshold) {
+                    copies.computeIfAbsent(file1.path, k -> new ArrayList<>()).add(file2.path);
+                }
+            }
+        }
+
+        return copies;
+    }
+
+    private static void processFile(Path file, List<FileData> files, String src) {
+        try {
+            String content = readFileWithFallback(file);
+
+            // Пропускаем тестовые файлы
             if (content.contains("@Test") || content.contains("org.junit.Test")) {
                 return;
             }
@@ -74,46 +166,39 @@ public class SourceScannerC {
             // Обрабатываем содержимое
             String processedContent = processContent(content);
 
-            // Получаем относительный путь
-            String relativePath = getRelativePath(file.toString(), srcRoot);
+            // Получаем относительный путь с правильным разделителем
+            String relativePath = getRelativePath(file.toString(), src);
 
-            files.add(new FileContent(relativePath, processedContent));
+            files.add(new FileData(relativePath, processedContent));
 
-        } catch (Exception e) {
-            // Игнорируем ошибки обработки файлов
+        } catch (IOException e) {
+            // Игнорируем файлы с ошибками чтения
         }
     }
 
-    private static String readFileContent(Path file) throws IOException {
-        try {
-            return Files.readString(file, StandardCharsets.UTF_8);
-        } catch (MalformedInputException e) {
-            byte[] bytes = Files.readAllBytes(file);
-            return new String(bytes, StandardCharsets.ISO_8859_1);
+    private static String readFileWithFallback(Path file) throws IOException {
+        Charset[] charsets = {StandardCharsets.UTF_8, StandardCharsets.ISO_8859_1,
+                Charset.forName("windows-1251"), StandardCharsets.US_ASCII};
+
+        for (Charset charset : charsets) {
+            try {
+                return Files.readString(file, charset);
+            } catch (MalformedInputException | UnmappableCharacterException e) {
+                // Пробуем следующую кодировку
+            }
         }
+
+        byte[] bytes = Files.readAllBytes(file);
+        return new String(bytes, StandardCharsets.UTF_8).replaceAll("[^\\x00-\\x7F]", "?");
     }
 
     private static String processContent(String content) {
-        // Удаляем комментарии
-        String withoutComments = removeComments(content);
-
-        // Удаляем package и import
-        String withoutPackageImports = removePackageAndImports(withoutComments);
-
-        // Заменяем последовательности символов с кодом <33 на пробел
-        String normalized = normalizeWhitespace(withoutPackageImports);
-
-        // Trim
-        return normalized.trim();
-    }
-
-    private static String removeComments(String content) {
         StringBuilder result = new StringBuilder();
         boolean inBlockComment = false;
-        boolean inLineComment = false;
         boolean inString = false;
         boolean inChar = false;
         char prevChar = 0;
+        boolean lastWasSpace = false;
 
         for (int i = 0; i < content.length(); i++) {
             char currentChar = content.charAt(i);
@@ -128,18 +213,9 @@ public class SourceScannerC {
                 continue;
             }
 
-            if (inLineComment) {
-                if (currentChar == '\n') {
-                    inLineComment = false;
-                    result.append(currentChar);
-                }
-                prevChar = currentChar;
-                continue;
-            }
-
             if (inString) {
                 result.append(currentChar);
-                if (prevChar != '\\' && currentChar == '"') {
+                if (currentChar == '"' && prevChar != '\\') {
                     inString = false;
                 }
                 prevChar = currentChar;
@@ -148,7 +224,7 @@ public class SourceScannerC {
 
             if (inChar) {
                 result.append(currentChar);
-                if (prevChar != '\\' && currentChar == '\'') {
+                if (currentChar == '\'' && prevChar != '\\') {
                     inChar = false;
                 }
                 prevChar = currentChar;
@@ -156,48 +232,57 @@ public class SourceScannerC {
             }
 
             if (prevChar == '/' && currentChar == '*') {
-                result.deleteCharAt(result.length() - 1);
                 inBlockComment = true;
+                result.deleteCharAt(result.length() - 1);
                 prevChar = 0;
                 continue;
             }
 
             if (prevChar == '/' && currentChar == '/') {
                 result.deleteCharAt(result.length() - 1);
-                inLineComment = true;
+                while (i < content.length() && content.charAt(i) != '\n') {
+                    i++;
+                }
+                if (i < content.length()) {
+                    if (!lastWasSpace) {
+                        result.append(' ');
+                        lastWasSpace = true;
+                    }
+                }
                 prevChar = 0;
                 continue;
             }
 
             if (currentChar == '"') {
                 inString = true;
-                result.append(currentChar);
-                prevChar = currentChar;
-                continue;
-            }
-
-            if (currentChar == '\'') {
+            } else if (currentChar == '\'') {
                 inChar = true;
-                result.append(currentChar);
-                prevChar = currentChar;
-                continue;
             }
 
-            result.append(currentChar);
+            if (currentChar < 33) {
+                if (!lastWasSpace) {
+                    result.append(' ');
+                    lastWasSpace = true;
+                }
+            } else {
+                result.append(currentChar);
+                lastWasSpace = false;
+            }
+
             prevChar = currentChar;
         }
 
-        return result.toString();
+        String processed = removePackageAndImports(result.toString());
+        return processed.trim();
     }
 
     private static String removePackageAndImports(String content) {
-        String[] lines = content.split("\n");
         StringBuilder result = new StringBuilder();
+        String[] lines = content.split("\n");
 
         for (String line : lines) {
-            String trimmedLine = line.trim();
-            if (!trimmedLine.startsWith("package") &&
-                    !trimmedLine.startsWith("import")) {
+            String trimmed = line.trim();
+            if (!trimmed.startsWith("package") && !trimmed.startsWith("import")) {
                 result.append(line).append("\n");
             }
         }
@@ -205,97 +290,17 @@ public class SourceScannerC {
         return result.toString();
     }
 
-    private static String normalizeWhitespace(String content) {
-        StringBuilder result = new StringBuilder();
-        boolean inWhitespace = false;
+    private static String getRelativePath(String fullPath, String src) {
+        // Используем Path API для правильного относительного пути
+        Path full = Paths.get(fullPath);
+        Path base = Paths.get(src);
 
-        for (int i = 0; i < content.length(); i++) {
-            char c = content.charAt(i);
-            if (c < 33) {
-                if (!inWhitespace) {
-                    result.append(' ');
-                    inWhitespace = true;
-                }
-            } else {
-                result.append(c);
-                inWhitespace = false;
-            }
+        try {
+            Path relative = base.relativize(full);
+            return relative.toString().replace("/", File.separator).replace("\\", File.separator);
+        } catch (IllegalArgumentException e) {
+            String relative = fullPath.substring(src.length());
+            return relative.replace("/", File.separator).replace("\\", File.separator);
         }
-
-        return result.toString();
-    }
-
-    private static String getRelativePath(String absolutePath, String srcRoot) {
-        return absolutePath.substring(srcRoot.length());
-    }
-
-    private static Map<String, List<String>> findCopies(List<FileContent> files) {
-        Map<String, List<String>> copies = new HashMap<>();
-        int n = files.size();
-
-        // Инициализируем карту
-        for (FileContent file : files) {
-            copies.put(file.path, new ArrayList<>());
-        }
-
-        // Оптимизация: предварительная фильтрация по длине
-        for (int i = 0; i < n; i++) {
-            FileContent file1 = files.get(i);
-            String content1 = file1.content;
-
-            for (int j = i + 1; j < n; j++) {
-                FileContent file2 = files.get(j);
-                String content2 = file2.content;
-
-                // Быстрая проверка: если длины сильно отличаются, пропускаем
-                if (Math.abs(content1.length() - content2.length()) > 10) {
-                    continue;
-                }
-
-                // Вычисляем расстояние Левенштейна
-                int distance = levenshteinDistance(content1, content2);
-
-                if (distance < 10) {
-                    copies.get(file1.path).add(file2.path);
-                    copies.get(file2.path).add(file1.path);
-                }
-            }
-        }
-
-        return copies;
-    }
-
-    private static int levenshteinDistance(String s1, String s2) {
-        int len1 = s1.length();
-        int len2 = s2.length();
-
-        // Используем оптимизацию: работаем с двумя строками
-        if (len1 < len2) {
-            return levenshteinDistance(s2, s1);
-        }
-
-        // Инициализация предыдущей строки
-        int[] prev = new int[len2 + 1];
-        for (int j = 0; j <= len2; j++) {
-            prev[j] = j;
-        }
-
-        // Вычисление расстояния
-        for (int i = 1; i <= len1; i++) {
-            int[] curr = new int[len2 + 1];
-            curr[0] = i;
-
-            for (int j = 1; j <= len2; j++) {
-                int cost = (s1.charAt(i - 1) == s2.charAt(j - 1)) ? 0 : 1;
-                curr[j] = Math.min(
-                        Math.min(curr[j - 1] + 1, prev[j] + 1),
-                        prev[j - 1] + cost
-                );
-            }
-
-            prev = curr;
-        }
-
-        return prev[len2];
     }
 }
